# ctxgov

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  module.yaml  pyproject.toml
config/: ctxvault.example.toml
docs/: activation-xray-try-in-5-minutes.html  change-gate-guide.md  curated-github-issues-2026-06-03.md  experimental-contract-evolution-policy.md  forensics-guide.md  index.html  linkedin-and-outreach-pack-2026-06-03.md  memory-state-influence-boundary-try-in-5-minutes.html  memory-xray-demo-report.html  memory-xray-demo-report.json  memory-xray-demo-report.md  oss-case-study-guide.md  oss-efficiency-methodology.md  outreach-tracker-template.csv  post-memory-state-task-shard-hn-candidate-2026-06-17.md  post-v0.7.0-task-shard-context-control-roadmap-2026-06-02.md  product-line-ledger.md  product-taxonomy-and-release-ladder-2026-06-02.md  project-page-and-demo-2026-06-03.md  provenance.md  public-core-boundary.md  public-github-repo-launch-checklist.md  public-positioning.md  public-release-boundary.md  public-release-checklist.md  public-repo-metadata.md  research-engineering-hiring-packet.md  runtime-evidence-receipt.md  task-shard-context-budget-try-in-5-minutes.html  tiny-fixture-memory-xray-demo.html  tiny-fixture-memory-xray-demo.json  try-in-5-minutes.html  v0.2-m2-compatibility-evidence.md  v0.2-m2-developer-framework.md  v0.2-m2-release-notes.md  v0.3-compiled-context.md  v0.3-release-notes.md  v0.3.1-release-notes.md  v0.3.2-release-notes.md  v0.3.3-release-notes.md  (+7 more)
fixtures/: README.md
release/: context-injection-m1-launch-gate.json
schemas/: README.md
scripts/: build_memory_state_influence_boundary_publication_bundle.py  build_task_shard_context_budget_publication_bundle.py  check_ascr_aligned_release_pack.py  check_memory_state_governability_overlay_publish_pack.py  check_memory_state_influence_boundary_byo_smoke.py  check_memory_state_influence_boundary_consumer_integration.py  check_memory_state_influence_boundary_consumer_wrapper_contract.py  check_memory_state_influence_boundary_final_preflight.py  check_memory_state_influence_boundary_integration_gate_contract.py  check_memory_state_influence_boundary_live_publication.py  check_memory_state_influence_boundary_owner_publish_packet_contract.py  check_memory_state_influence_boundary_public_checkout_readiness.py  check_memory_state_influence_boundary_release_distinctness.py  check_memory_state_influence_boundary_report_contract.py  check_memory_state_influence_boundary_social_draft_drift.py  check_public_evidence_release_pack.py  check_public_live_links.py  check_public_surface_hardening.py  check_publication_intent.py  check_release_integrity.py  check_task_shard_context_budget_final_preflight.py  check_task_shard_context_budget_live_publication.py  check_task_shard_context_budget_owner_publish_packet_contract.py  check_task_shard_context_budget_public_checkout_readiness.py  check_task_shard_context_budget_report_contract.py  check_task_shard_context_budget_social_draft_drift.py  check_task_shard_private_gate.py  check_v012_fresh_clone_product_receipt.py  check_v050_public_drafts.py  inspect_v032_demo_receipts.py  (+32 more)
(+441 files in other folders)
