[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxgov"
version = "0.6.13"
description = "Local context governance and health reports before AI tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["ai", "context", "governance", "receipts", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ctxgov/ctxgov"
Repository = "https://github.com/ctxgov/ctxgov"
Issues = "https://github.com/ctxgov/ctxgov/issues"
Changelog = "https://github.com/ctxgov/ctxgov/releases/tag/v0.6.13-auto-publish-research"

[project.optional-dependencies]
schema = ["pydantic>=2.7"]

[project.scripts]
ctxgov = "ctxgov.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
