[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxgov"
version = "0.7.0"
description = "Local-first agent context and session-continuity diagnostics"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "CtxGov" }]
keywords = ["agent", "context-engineering", "llm", "memory", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.scripts]
ctxgov = "ctxgov.cli:main"

[project.urls]
Homepage = "https://github.com/ctxgov/ctxgov"
Documentation = "https://github.com/ctxgov/ctxgov/tree/main/docs"
Repository = "https://github.com/ctxgov/ctxgov"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
